# krux-installer

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  WARNING.md  docker-compose.yml  electron-builder.json5  electron-builder.yml  flake.nix  index.html  jsconfig.json  krux-installer.py  krux_installer.kv  krux_installer.py  package.json  pyproject.toml  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vue.config.js  wdio.conf.js  wdio.conf.mts  wdio.conf.ts
.ci/: build.py  clean.py  create-deb.sh  create-nsis.py  create-rpm.sh  create-spec.py  edit-spec.ps1  filter-author-permissions.js  krux-installer.nsi  patch-pyinstaller-kivy-hook.ps1  patch-pyinstaller-kivy-hook.sh
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  help_wanted.md
.github/workflows/: build-linux-appimage.yml  build-linux-deb-arm64.yml  build-linux-deb.yml  build-linux-pkg.yml  build-linux-rpm-arm64.yml  build-linux-rpm.yml  build-linux.yml  build-mac-dmg.yml  build-win-nsis-installer.yml  build-win.yml  build-windows-nsis.yml  build-wine.yml  build.yml  ci-linux.yml  ci-windows.yml  ci.yml  config-linux.yml  config-win.yml  conventional-commits.yml  lint.yml  nix_darwin.yml  nix_linux.yml  test-linux.yml  test-main-linux.yml  test-win.yml  tests.yml  upload-linux-appimage.yml  upload-linux.yml  upload-win.yml
.pylint/: src  tests
assets/: icon.icns
dockerfiles/deb/: Dockerfile
dockerfiles/rpm/: Dockerfile
e2e/: test_000_base_screen.py  test_001_base_screen.py  test_001_greetings_screen.py  test_002_ask_permission_dialout_screen.py  test_002_check_permissions_screen.py  test_002_main_screen.py  test_002_render_screens.py  test_003_flash_screen.py  test_003_main_screen.py  test_003_select_device_screen.py  test_004_select_device_screen.py  test_004_select_version_screen.py  test_004_wipe_screen.py  test_005_select_old_version_screen.py  test_005_select_version_screen.py  test_006_select_old_version_screen.py  test_006_warning_beta_screen.py  test_007_about_screen.py  test_007_warning_beta_screen.py  test_008_about_screen.py  test_008_greetings_screen.py  test_009_base_download_screen.py  test_010_download_stable_zip_screen.py  test_011_download_stable_zip_sha256_screen.py  test_012_download_stable_zip_sig_screen.py  test_013_download_selfcustody_pem_screen.py  test_014_download_beta_screen.py  test_015_warning_already_downloaded_screen.py  test_016_unzip_stable_screen.py  test_017_verify_stable_zip_screen.py  test_018_base_krux_installer.py  test_019_config_krux_installer.py  test_020_app_init.py  test_021_base_flash_screen.py  test_022_flash_screen.py  test_023_wipe_screen.py  test_024_warning_wipe_screen.py  test_025_error_screen.py  test_026_base_screen_linux_logical_drives.py  test_026_base_screen_windows_logical_drives.py  (+9 more)
e2e_drives/: test_002_base_screen_macos_logical_drives.py  test_004_fail_base_screen_windows_logical_drives.py  test_005_fail_base_screen_macos_logical_drives.py  test_006_fail_unknow_base_screen_linux_logical_drives.py  test_007_fail_unknow_base_screen_macos_logical_drives.py
electron/: electron-env.d.ts
electron/main/: index.ts
electron/preload/: index.ts
lib/: app.ts  base.ts  change-page.ts  check-if-it-will-flash.ts  check-if-it-will-wipe.ts  check-resource.ts  download-resources.ts  flash.ts  handler.ts  quit.ts  storage.ts  store-get.ts  store-set.ts  unzip-resource.ts  utils.ts  verify-official-releases-fetch.ts  verify-official-releases-hash.ts  verify-official-releases-sign.ts  verify-openssl.ts  wdio-test.ts  wipe.ts
prebuild/: fetch_firmware.py  fetch_firmware.sh
public/: preload.js
scripts/: build.py
src/: App.vue  background.js  background.js.1  electron-env.d.ts  main.js  main.ts  preload.js  style.css
src/app/: __init__.py  about_screen.py  base_krux_installer.py  base_screen.py  config_krux_installer.py  flash_screen.py  krux_installer.kv  krux_installer.py  main_screen.py  wipe_screen.py
src/components/: BeforeFlashDevicePage.vue  CheckResourcesPage.vue  ConfirmDetectedDevicePage.vue  ConfirmDetectedSDCardPage.vue  DetectDevicePage.vue  DetectSDCardPage.vue  DownloadFirmwarePage.vue  DownloadKbootPage.vue  DownloadKtoolPage.vue  DownloadOfficialReleasePage.vue  DownloadOfficialReleasePemPage.vue  DownloadOfficialReleaseSHA256Page.vue  DownloadOfficialReleaseSigPage.vue  DownloadPage.vue  DownloadTestFirmwarePage.vue  DownloadTestKbootPage.vue  DownloadTestKtoolPage.vue  ExecutePage.vue  HelloWorld.vue  InstallToDevicePage.vue  KruxLogo.vue  MainPage.vue  SelectActionPage.vue  SelectDevicePage.vue  SelectFirmwarePage.vue  SelectVersionPage.vue  UnzipOfficialReleasesPage.vue  VerifyOfficialReleasesPage.vue  (+2 more)
src/lib/: base.js  (+25 more)
tests/: property_instance_mock.py  shared_mocks.py  test_000_constants.py  test_001_info.py  test_001_selector_devices.py  test_001_trigger.py  test_002_selector_firmware_versions.py  test_002_selector_init.py  test_002_trigger.py  test_002_trigger_downloader.py  test_003_download_file.py  test_003_selector.py  test_003_selector_devices.py  test_004_base_downloader.py  test_005_base_downloader.py  test_005_selector_devices.py  test_005_stream_downloader.py  test_005_trigger_downloader.py  test_006_stream_downloader.py  test_006_stream_downloader_zip_release.py  test_006_trigger_downloader.py  test_007_asset_downloader.py  test_007_stream_downloader.py  test_008_asset_downloader.py  test_008_zip_downloader.py  test_009_sha256_downloader.py  test_010_pem_downloader.py  test_010_sig_downloader.py  test_011_sig_downloader.py  test_012_beta_downloader.py  test_013_base_verifyer.py  test_013_beta_downloader.py  test_014_ktool_downloader.py  test_015_check_verifyer.py  test_015_sha256_check_verifyer.py  test_016_pem_check_verifyer.py  test_017_sig_check_verifyer.py  test_018_pem_check_verifyer.py  test_018_sha256_verifyer.py  test_019_sig_verifyer.py  (+30 more)
typings/: index.d.ts
ubuntu/: Dockerfile  build.py  chrooter.sh  docker-compose.yml
(+609 files in other folders)
