[project]
name = "krux-installer"
version = "0.0.22"
description = "A GUI based application to flash Krux firmware on K210 based devices"
authors = [
    {name = "qlrd", email = "qlrddev@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">3.10,<=3.14"

dependencies = [
    "kivy==2.3.1",
    "tomli>=2.4.0,<3.0.0; python_version<'3.11'",
    "pyserial>=3.5,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "cryptography>=46.0.4,<47.0.0",
    "qrcode>=8.2,<9.0",
    "easy-i18n>=1.2.0,<2.0.0",
    "pysudoer @ git+https://github.com/qlrd/pysudoer.git",
    "pyinstaller>=6.18.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0,<27.0.0",
    "pylint>=4.0.4,<5.0.0",
    "pyinstaller>=6.18.0,<7.0.0",
    "pytest-cov>=6.3.0,<7.0.0",
    "poethepoet>=0.41.0,<1.0.0",
    "demjson3>=3.0.6,<4.0.0",
]
[tool.poe.tasks]
cli = "python krux_installer.py"
format-src = "black ./src"
format-tests = "black ./tests"
format-e2e = "black ./e2e"
format-drives = "black ./e2e_drives"
format-installer = "black ./krux_installer.py"
format = [
  "format-src",
  "format-tests",
  "format-e2e",
  "format-drives",
  "format-installer",
]

test-unit = "pytest --cache-clear --cov=src/utils/constants --cov=src/utils/info --cov=src/utils/selector --cov=src/utils/downloader --cov=src/utils/trigger --cov=src/utils/flasher --cov=src/utils/unzip --cov=src/utils/signer --cov=src/utils/verifyer --cov=src/i18n --cov-branch --cov-report html ./tests"
test-e2e = "pytest --cov-append --cov=src/app --cov-branch --cov-report html ./e2e"
test-drives = "pytest --cov-append --cov=src/app --cov-branch --cov-report html ./e2e_drives"
test = ["test-unit", "test-e2e", "test-drives"]

coverage-unit = "pytest --cache-clear --cov=src/utils/constants --cov=src/utils/info --cov=src/utils/selector --cov=src/utils/downloader --cov=src/utils/trigger --cov=src/utils/flasher --cov=src/utils/unzip --cov=src/utils/signer --cov=src/utils/verifyer --cov=src/i18n --cov-branch --cov-report xml ./tests"
coverage-e2e = "pytest --cov-append --cov=src/app --cov-branch --cov-report xml ./e2e"
coverage-drives = "pytest --cov-append --cov=src/app --cov-branch --cov-report xml ./e2e_drives"
coverage = ["coverage-unit", "coverage-e2e", "coverage-drives"]

lint.sequence = [
  { cmd = "jsonlint src/i18n/*.json" },
  { cmd = "pylint --rcfile=.pylint/src ./src" },
  { cmd = "pylint --rcfile=.pylint/tests ./tests" },
  { cmd = "pylint --rcfile=.pylint/tests ./e2e" },
  { cmd = "pylint --rcfile=.pylint/tests ./e2e_drives" },
]

build-linux.sequence = [
  { cmd = "sh .ci/patch-pyinstaller-kivy-hook.sh" },
  { cmd = "python .ci/create-spec.py" },
  { cmd = "python -m PyInstaller krux-installer.spec" },
]

build-macos.sequence = [
  { cmd = "find . -name '.DS_Store' -delete" },
  { cmd = "sh .ci/patch-pyinstaller-kivy-hook.sh" },
  { cmd = "python .ci/create-spec.py" },
  { cmd = "python -m PyInstaller krux-installer.spec" },
]

build-win.sequence = [
  { cmd = "powershell.exe -File .ci/patch-pyinstaller-kivy-hook.ps1" },
  { cmd = "python .ci/create-spec.py" },
  { interpreter = [
    "powershell",
    "pwsh",
  ], shell = "& .ci/edit-spec.ps1" },
  { cmd = "python -m PyInstaller krux-installer.spec" },
]

[tool.poe.tasks.dev-debug]
env = { LOGLEVEL = "debug" }
cmd = "python krux_installer.py"

[tool.poe.tasks.dev]
env = { LOGLEVEL = "info" }
cmd = "python krux_installer.py"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]